--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dnd5e-currency-advancement",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "index.js",
   "scripts": {
     "build": "gulp build",
@@ -40,7 +40,5 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
-  "dependencies": {
-    "@actions/github": "^6.0.0"
-  }
+  "dependencies": {"@actions/github": "^6.0.0"}
 }
