--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dnd5e-currency-advancement",
-  "version": "1.0.1",
+  "version": "v1.0.2",
   "main": "index.js",
   "scripts": {
     "build": "foundry-vtt-build-tools build",
